--- a/Soo/rainbow/main/main.css
+++ b/Soo/rainbow/main/main.css
@@ -16,15 +16,31 @@ body {
   height: 1000vw;
 }
 
-section.innerbox {
+.container {
   position: absolute;
   top: 3vw;
   left: 10vw;
   width: 80vw;
   height: 1000vw;
   border: 5px solid #f8f8f8;
-  background-color: lightpink;
   border-radius: 30px;
+}
+
+section.innerbox {
+  width: 100%;
+  height: 150vw;
+  background-color: lightpink;
+  border-radius: 23px;
+}
+section.innerbox::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 100vw;
+  left: 0px;
+  width: 100%;
+  height: 80vh;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(247, 94, 87));
 }
 
 #intro {
@@ -134,29 +150,24 @@ section.innerbox {
     fill: black;
   }
 }
-.one_half {
+.second {
   position: absolute;
-  text-align: center;
+  top: 138.7vw;
+  width: 100%;
+  height: 500vw;
+  background-color: rgb(247, 94, 87);
 }
-
-.one_half div {
-  top: 200vw;
-  font-size: 99px;
+.second.red {
+  position: absolute;
+  top: 100vw;
+  left: 0vw;
 }
-
-.second svg {
-  margin-top: 80vw;
-  max-height: 70vh;
-  width: 500px;
-}
-
-.scroll {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 120px;
-  color: white;
+.second.img {
+  position: absolute;
+  border-radius: 30px;
+  width: 42vw;
+  height: 56vw;
+  transform-origin: center;
 }
 
 /*# sourceMappingURL=main.css.map */
