--- a/Soo/rainbow/main/main.scss
+++ b/Soo/rainbow/main/main.scss
@@ -16,19 +16,36 @@ body {
     height: 1000vw;
 }
 
-section.innerbox {
+.container {
     position: absolute;
     top: 3vw;
     left: 10vw;
     width: 80vw;
     height: 1000vw;
     border: 5px solid #f8f8f8;
-    background-color: lightpink;
     border-radius: 30px;
+}
+
+section.innerbox {
+    width: 100%;
+    height: 150vw;
+    background-color: lightpink;
+    border-radius: 23px;
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 100vw;
+        left: 0px;
+        width: 100%;
+        height: 80vh;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(247, 94, 87, 1));
+    }
 }
 #intro {
     position: absolute;
     border: 1px solid red;
+
     top: 10vw;
     left: 28vw;
 }
@@ -137,36 +154,49 @@ section.innerbox {
 }
 
 // ===================================================================
-// body,
-// html {
-//     width: 100%;
-//     height: 100%;
-//     background: #ddd;
-//     font-size: 99px;
+
+// .one_half {
+//     position: absolute;
 //     text-align: center;
 // }
-.one_half {
-    position: absolute;
-    text-align: center;
-}
 
-.one_half div {
-    top: 200vw;
-    font-size: 99px;
-}
+// .one_half div {
+//     top: 200vw;
+//     font-size: 99px;
+// }
 
 // ===================================================================
-.second svg {
-    margin-top: 80vw;
-    max-height: 70vh;
-    width: 500px;
-}
+.second {
+    position: absolute;
+    top: 138.7vw;
+    width: 100%;
+    height: 500vw;
+    background-color: rgba(247, 94, 87, 1);
 
-.scroll {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 120px;
-    color: white;
+    &.red {
+        position: absolute;
+        top: 100vw;
+        left: 0vw;
+    }
+
+    &.img {
+        position: absolute;
+        border-radius: 30px;
+        width: 42vw;
+        height: 56vw;
+        transform-origin: center;
+    }
 }
+// .second {
+//     &::before {
+//         content: "";
+//         display: block;
+//         position: absolute;
+//         z-index: 2;
+//         top: 0px;
+//         left: 0px;
+//         width: 100%;
+//         height: 50vh;
+//         background: linear-gradient(180deg, rgba(247, 94, 87, 1), rgba(255, 127, 80, 0));
+//     }
+// }
