--- a/Soo/rainbow/main/main.css
+++ b/Soo/rainbow/main/main.css
@@ -40,12 +40,11 @@ section.innerbox::after {
   left: 0px;
   width: 100%;
   height: 80vh;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(247, 94, 87));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(255, 255, 255));
 }
 
 #intro {
   position: absolute;
-  border: 1px solid red;
   top: 10vw;
   left: 28vw;
 }
@@ -155,19 +154,41 @@ section.innerbox::after {
   top: 138.7vw;
   width: 100%;
   height: 500vw;
-  background-color: rgb(247, 94, 87);
+  background-color: white;
 }
-.second.red {
+.second .red {
+  text-align: center;
+}
+.second .red img:nth-child(1) {
   position: absolute;
-  top: 100vw;
+  top: 17.3vw;
   left: 0vw;
-}
-.second.img {
-  position: absolute;
   border-radius: 30px;
-  width: 42vw;
-  height: 56vw;
+  width: 20vw;
+  height: 32.2vw;
   transform-origin: center;
+  border-radius: 10px;
+  z-index: 2;
+  transform: scale(1.2);
+}
+.second .red img:nth-child(2) {
+  position: absolute;
+  top: 14.3vw;
+  left: 55vw;
+  border-radius: 30px;
+  width: 10vw;
+  height: 18vw;
+  transform-origin: center;
+  border-radius: 10px;
+  z-index: 2;
+}
+.second .red .text {
+  font-size: 10vw;
+  font-weight: bold;
+  text-shadow: -3px -3px 5px lightpink;
+  letter-spacing: 1px;
+  line-height: 8vw;
+  color: rgb(252, 26, 64);
 }
 
 /*# sourceMappingURL=main.css.map */
