--- a/Soo/rainbow/main/main.scss
+++ b/Soo/rainbow/main/main.scss
@@ -39,12 +39,12 @@ section.innerbox {
         left: 0px;
         width: 100%;
         height: 80vh;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(247, 94, 87, 1));
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(255, 255, 255, 1));
     }
 }
 #intro {
     position: absolute;
-    border: 1px solid red;
+    // border: 1px solid red;
 
     top: 10vw;
     left: 28vw;
@@ -171,21 +171,64 @@ section.innerbox {
     top: 138.7vw;
     width: 100%;
     height: 500vw;
-    background-color: rgba(247, 94, 87, 1);
+    background-color: white;
 
-    &.red {
+    & .red {
+        // position: absolute;
+        // top: 50vw;
+        // left: 0vw;
+        text-align: center;
+    }
+
+    & .red img:nth-child(1) {
         position: absolute;
-        top: 100vw;
+        top: 17.3vw;
         left: 0vw;
+        border-radius: 30px;
+        width: 20vw;
+        height: 32.2vw;
+        transform-origin: center;
+        border-radius: 10px;
+        z-index: 2;
+        transform: scale(1.2);
     }
 
-    &.img {
+    & .red img:nth-child(2) {
         position: absolute;
+        top: 14.3vw;
+        left: 55vw;
         border-radius: 30px;
-        width: 42vw;
-        height: 56vw;
+        width: 10vw;
+        height: 18vw;
         transform-origin: center;
+        border-radius: 10px;
+        z-index: 2;
     }
+
+    & .red .text {
+        font-size: 10vw;
+        font-weight: bold;
+        text-shadow: -3px -3px 5px lightpink;
+        letter-spacing: 1px;
+        line-height: 8vw;
+        color: rgb(252, 26, 64);
+    }
+
+    // & .red .text1 {
+    //     z-index: 5;
+    // }
+    // & .red .text2 {
+    //     z-index: 4;
+    // }
+    // & .red .text3 {
+    //     z-index: 3;
+    // }
+    // & .red .text4 {
+    //     z-index: 2;
+    // }
+    // & .red .text5 {
+    //     z-index: 1;
+    // }
 }
 // .second {
 //     &::before {
