--- a/COMPLETE/Soo/main/main.scss
+++ b/COMPLETE/Soo/main/main.scss
@@ -272,10 +272,11 @@ section.innerbox {
     position: absolute;
     top: 687.1vw;
     width: 100%;
-    height: 500vw;
+    height: 200vw;
     background-color: rgb(18, 41, 67);
     font-size: 9vw;
     color: rgb(11, 24, 39);
+    text-shadow: 3px 3px 3px rgb(47, 75, 119);
 
     & .bbaegom1 {
         width: 100%;
